--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,15 @@
     }
   },
   "require": {
-    "symfony/http-foundation": "^7.0",
-    "symfony/routing": "^7.0",
-    "symfony/http-kernel": "^7.0",
-    "symfony/config": "^7.0",
-    "symfony/dependency-injection": "^7.0",
+    "symfony/http-foundation": "6.4",
+    "symfony/routing": "6.4",
+    "symfony/http-kernel": "6.4",
+    "symfony/config": "6.4",
+    "symfony/dependency-injection": "6.4",
     "twig/twig": "^3.8",
-    "symfony/yaml": "^7.0"
+    "symfony/yaml": "6.4"
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.0"
+    "phpunit/phpunit": "10"
   }
 }
