--- a/src/Configuration/conteneur.yml
+++ b/src/Configuration/conteneur.yml
@@ -66,7 +66,7 @@ services:
 
   controleur_base:
     class: App\Trellotrolle\Controleur\ControleurBase
-    arguments: ['@container',]
+    arguments: ['@container']
 
 
   #Twig
