--- a/src/Configuration/conteneur.yml
+++ b/src/Configuration/conteneur.yml
@@ -92,3 +92,15 @@ services:
   controleur_generique:
     class: App\Trellotrolle\Controleur\ControleurGenerique
     arguments: [ "@container" ]
+
+  #API
+  controleur_carte_api:
+    class: App\Trellotrolle\Controleur\ControleurCarteAPI
+    arguments: ['@service_utilisateur','@service_connexion','@service_carte','@service_colonne']
+
+  controleur_colonne_api:
+    class: App\Trellotrolle\Controleur\ControleurColonneAPI
+    arguments: ['@service_connexion','@service_colonne','@service_utilisateur','@service_tableau']
+  controleur_tableau_api:
+    class: App\trellotrolle\Controleur\ControleurTableauAPI
+    arguments: ['@service_connexion','@service_tableau','@service_utilisateur','@service_carte']
