--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "symfony/config": "6.4",
     "symfony/dependency-injection": "6.4",
     "twig/twig": "^3.8",
-    "symfony/yaml": "6.4",
-    "ext-http": "*"
+    "symfony/yaml": "6.4"
   },
   "require-dev": {
     "phpunit/phpunit": "10"
