--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "symfony/config": "6.4",
     "symfony/dependency-injection": "6.4",
     "twig/twig": "^3.8",
-    "symfony/yaml": "6.4"
+    "symfony/yaml": "6.4",
+    "firebase/php-jwt": "^6.10"
   },
   "require-dev": {
     "phpunit/phpunit": "10"
