feat : Mise en place de la possibilité de changer de mdp par mail (théorie)

--- a/src/Configuration/conteneur.yml
+++ b/src/Configuration/conteneur.yml
@@ -48,7 +48,8 @@ services:
 
   service_utilisateur:
     class: App\Trellotrolle\Service\ServiceUtilisateur
-    arguments: ['@utilisateur_repository','@tableau_repository','@carte_repository']
+    arguments: ['@utilisateur_repository','@tableau_repository','@carte_repository','@verification_email']
+
 
   service_connexion:
     class: App\Trellotrolle\Service\ServiceConnexion
@@ -99,6 +100,9 @@ services:
   controleur_generique:
     class: App\Trellotrolle\Controleur\ControleurGenerique
     arguments: [ "@container" ]
+  verification_email:
+    class : App\Trellotrolle\Lib\VerificationEmail
+    arguments: [ "@url_generator" ]
 
   #API
   controleur_carte_api:
