--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "symfony/dependency-injection": "6.4",
     "twig/twig": "^3.8",
     "symfony/yaml": "6.4",
-    "firebase/php-jwt": "^6.10"
+    "firebase/php-jwt": "^6.10",
+    "ext-pdo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "10"
